# vichenc

./: .gitignore  .rtx.toml  README.md  pyproject.toml  util.py
src/vichenc/: main.py
